# OpenCV

./: .gitignore  OpenCV.sln
OpenCvFukSakeWork/: .gitignore  CMakeLists.txt  Chapter1.hpp  Chapter2.hpp  Chapter3.hpp  Chapter4.hpp  Chapter5.hpp  Chapter6.hpp  Chapter7.hpp  Chapter8.hpp  OpenCvFukSakeWork.vcxproj  OpenCvFukSakeWork.vcxproj.filters  README.md  Source.cpp  VirtualPainter.hpp  utils.hpp
OpenCvFukSakeWork/Resources/: hitDaBong.jfif
